force-app/main/default/objects/maps__LiveDailySummaryConfig__c/maps__LiveDailySummaryConfig__c.object-meta.xml
<CustomObject>
    <label>Maps Live Daily Summary Configuration</label>
    <nameField>
        <label>Maps Live Daily Summary Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Live Daily Summary Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>