force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__CreateDeviceBatteryRecord__c.field-meta.xml
<CustomField>
    <fullName>maps__CreateDeviceBatteryRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Device Battery Record</label>
    <type>Checkbox</type>
</CustomField>