force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__CreateHardAccelRecord__c.field-meta.xml
<CustomField>
    <fullName>maps__CreateHardAccelRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Hard Accel Record</label>
    <type>Checkbox</type>
</CustomField>