force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__CreateHardBrakeRecord__c.field-meta.xml
<CustomField>
    <fullName>maps__CreateHardBrakeRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Hard Brake Record</label>
    <type>Checkbox</type>
</CustomField>