force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__CreateSpeedRecord__c.field-meta.xml
<CustomField>
    <fullName>maps__CreateSpeedRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Speed Record</label>
    <type>Checkbox</type>
</CustomField>