force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__CreateSpeedThresholdRecord__c.field-meta.xml
<CustomField>
    <fullName>maps__CreateSpeedThresholdRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Speed Threshold Record</label>
    <type>Checkbox</type>
</CustomField>