force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__CreateStateMileageRecord__c.field-meta.xml
<CustomField>
    <fullName>maps__CreateStateMileageRecord__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create State Mileage Record</label>
    <type>Checkbox</type>
</CustomField>