force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__CreateStopRecord__c.field-meta.xml
<CustomField>
    <fullName>maps__CreateStopRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Stop Record</label>
    <type>Checkbox</type>
</CustomField>