force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__Description__c.field-meta.xml
<CustomField>
    <fullName>maps__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>