force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__DeviceLayer__c.field-meta.xml
<CustomField>
    <fullName>maps__DeviceLayer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Live Layer</label>
    <referenceTo>maps__MarkerLayer__c</referenceTo>
    <relationshipLabel>Live Daily Summary Configurations</relationshipLabel>
    <relationshipName>LiveDailySummaryConfigs</relationshipName>
    <type>Lookup</type>
</CustomField>