force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__DistanceValue__c.field-meta.xml
<CustomField>
    <fullName>maps__DistanceValue__c</fullName>
    <label>Distance Value</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>