force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__DriveTripOptimization__c.field-meta.xml
<CustomField>
    <fullName>maps__DriveTripOptimization__c</fullName>
    <label>Drive Trip Optimization</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Tracking</fullName>
                <default>true</default>
                <label>Vehicle Tracking</label>
            </value>
            <value>
                <fullName>Mobile Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>