force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__JobId__c.field-meta.xml
<CustomField>
    <fullName>maps__JobId__c</fullName>
    <description>The current job id of the running Summary batch job associated with this config</description>
    <inlineHelpText>The current job id of the running Summary batch job associated with this config</inlineHelpText>
    <label>Job Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>