force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__LastBatchEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>maps__LastBatchEndDateTime__c</fullName>
    <label>Last Batch End Date/Time</label>
    <type>DateTime</type>
</CustomField>