force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__LastBatchStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>maps__LastBatchStartDateTime__c</fullName>
    <label>Last Batch Start Date/Time</label>
    <type>DateTime</type>
</CustomField>