force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__MeasureOfDistance__c.field-meta.xml
<CustomField>
    <fullName>maps__MeasureOfDistance__c</fullName>
    <label>Measure of Distance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>meters</fullName>
                <label>Meters</label>
            </value>
            <value>
                <fullName>feet</fullName>
                <default>true</default>
                <label>Feet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>