force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__SpeedAmtOfTime__c.field-meta.xml
<CustomField>
    <fullName>maps__SpeedAmtOfTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speed Amt Of Time</label>
    <type>Checkbox</type>
</CustomField>