force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__SpeedingEventActive__c.field-meta.xml
<CustomField>
    <fullName>maps__SpeedingEventActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speeding Event Active</label>
    <type>Checkbox</type>
</CustomField>