force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__SpeedLimitOver__c.field-meta.xml
<CustomField>
    <fullName>maps__SpeedLimitOver__c</fullName>
    <label>Speed Limit Over</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>