force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__SpeedLimitTime__c.field-meta.xml
<CustomField>
    <fullName>maps__SpeedLimitTime__c</fullName>
    <label>Speed Limit Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>