force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__SpeedLimitTimeIncrement__c.field-meta.xml
<CustomField>
    <fullName>maps__SpeedLimitTimeIncrement__c</fullName>
    <label>Speed Limit Time Increment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
                <default>true</default>
                <label>Minutes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>