force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__SpeedThreshold__c.field-meta.xml
<CustomField>
    <fullName>maps__SpeedThreshold__c</fullName>
    <label>Speed Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>