force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__SpeedThresholdEventActive__c.field-meta.xml
<CustomField>
    <fullName>maps__SpeedThresholdEventActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speed Threshold Event Active</label>
    <type>Checkbox</type>
</CustomField>