force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__SpeedThresholdTime__c.field-meta.xml
<CustomField>
    <fullName>maps__SpeedThresholdTime__c</fullName>
    <label>Speed Threshold Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>