force-app/main/default/objects/maps__LiveDailySummaryConfig__c/fields/maps__SpeedValue__c.field-meta.xml
<CustomField>
    <fullName>maps__SpeedValue__c</fullName>
    <label>Speed Value</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>